--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,14 +1,24 @@
 <view class="navbar">
-  <view class="navbar-item" wx:for="{{navbar}}" wx:for-index="idx" data-idx="{{idx}}" bindtap="swichNav">
-    <text class="navbar-text {{currentNavbar==idx ? 'active' : ''}}">{{item}}</text>
+  <!-- bindtap will toggle the page function -->
+  <view class="navbar-item"
+        wx:for="{{navbar}}"
+        data-idx="{{index}}"
+        bindtap="switchNav">
+    <text class="navbar-text {{currentNavbar==index ? 'active' : ''}}">{{item}}</text>
   </view>
 </view>
 
 <!-- 推荐 -->
-<scroll-view class="hot-item-container {{currentNavbar==0 ? '' : 'hidden'}}" style="height: {{systemInfo.windowHeight}}px;"
-  scroll-y="true" bindscrolltolower="pullUpLoad">
-  <swiper indicator-dots="true" autoplay="true" interval="4000" duration="600"
-    style="height:{{systemInfo.windowWidth/2}}px">
+<scroll-view class="hot-item-container {{currentNavbar==0 ? '' : 'hidden'}}"
+             style="height: {{systemInfo.windowHeight}}px;"
+             scroll-y="true"
+             bindscrolltolower="pullUpLoad">
+
+  <swiper indicator-dots="true"
+          autoplay="true"
+          interval="4000"
+          duration="600"
+          style="height:{{systemInfo.windowWidth/2}}px">
     <block wx:for="{{swipers}}">
       <swiper-item>
         <image src="{{item.pic}}" class="slide-image" width="750"/>
@@ -17,15 +27,94 @@
   </swiper>
 
   <view class="line-text">
-    编辑推荐
+    热销推荐
   </view>
 
   <block wx:for="{{list}}">
     <view class="hot-item">
-      <view class="image-container" data-row-id="{{item.row_id}}" bindtap="onItemClick">
-        <image src="{{_api.HOST_WORK+item.pic.pid}}!app.c540.webp"
+      <view class="image-container"
+            data-row-id="{{item.row_id}}"
+            bindtap="itemClickCallback">
+        <image src="{{api.HOST_WORK+item.pic.pid}}!app.c540.webp"
           mode="scaleToFill" class="hot-image"
           style="width:{{systemInfo.windowWidth}}px;height:{{systemInfo.windowWidth}}px">
+        </image>
+        <view class="item-mask">
+          <text class="hot-item-title">商品名字{{item.name}}</text>
+          <text class="hot-item-category">商品详细描述：asdfasdf..............</text>
+        </view>
+      </view>
+
+      <view class="hot-item-desc">
+        <image src="{{api.HOST_HEAD+item.user.uid}}/180"
+               class="hot-head-image"></image>
+        <view class="hot-item-detail">
+          <text class="hot-item-username">商品名字XXX</text>
+          <view class="hot-location">
+            发货地址之类的: {{item.user.city}}
+          </view>
+        </view>
+        <view class="hot-item-like">
+          ￥{{item.num_liked}}
+        </view>
+      </view>
+    </view>
+  </block>
+</scroll-view>
+
+<!-- items -->
+<scroll-view class="items-item-container {{currentNavbar==1 ? '' : 'hidden'}}" style="height: {{systemInfo.windowHeight}}px;" scroll-y="true" bindscrolltolower="pullUpLoadItems">
+  <block wx:for="{{items_list}}">
+    <view wx:if="{{index%3===0}}" class="items-item">
+      <image src="{{api.HOST_WORK+items_list[index].pic.pid}}!app.c360.webp" class="items-image"
+        data-row-id="{{items_list[index].row_id}}" bindtap="itemClickCallback"
+        style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill">
+      </image>
+      <image src="{{api.HOST_WORK+items_list[index+1].pic.pid}}!app.c360.webp" class="items-image"
+        data-row-id="{{items_list[index+1].row_id}}" bindtap="itemClickCallback"
+        style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill">
+      </image>
+      <image src="{{api.HOST_WORK+items_list[index+2].pic.pid}}!app.c360.webp" class="items-image"
+        data-row-id="{{items_list[index+2].row_id}}" bindtap="itemClickCallback"
+        style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill">
+      </image>
+    </view>
+  </block>
+</scroll-view>
+
+<!-- news -->
+<scroll-view class="latest-item-container {{currentNavbar==2 ? '' : 'hidden'}}" style="height: {{systemInfo.windowHeight}}px;" scroll-y="true" bindscrolltolower="pullUpLoadLatest">
+  <!-- <view class="section"> -->
+  <!--   <view class="section__title">vertical scroll</view> -->
+  <!--   <scroll-view scroll-y="true" style="height: 200px;" bindscrolltoupper="upper" bindscrolltolower="lower" bindscroll="scroll" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}"> -->
+  <!--     <view id="green" class="scroll-view-item bc_green"></view> -->
+  <!--     <view id="red"  class="scroll-view-item bc_red"></view> -->
+  <!--     <view id="yellow" class="scroll-view-item bc_yellow"></view> -->
+  <!--     <view id="blue" class="scroll-view-item bc_blue"></view> -->
+  <!--   </scroll-view> -->
+
+  <!--   <view class="btn-area"> -->
+  <!--     <button size="mini" bindtap="tap">click me to scroll into view </button> -->
+  <!--     <button size="mini" bindtap="tapMove">click me to scroll</button> -->
+  <!--   </view> -->
+  <!-- </view> -->
+  <!-- <view class="section section_gap"> -->
+  <!--   <view class="section__title">horizontal scroll</view> -->
+  <!--   <scroll-view class="scroll-view_H" scroll-x="true" style="width: 100%"> -->
+  <!--     <view id="green" class="scroll-view-item_H bc_green"></view> -->
+  <!--     <view id="red"  class="scroll-view-item_H bc_red"></view> -->
+  <!--     <view id="yellow" class="scroll-view-item_H bc_yellow"></view> -->
+  <!--     <view id="blue" class="scroll-view-item_H bc_blue"></view> -->
+  <!--   </scroll-view> -->
+  <!-- </view> -->
+  <block wx:for="{{list}}">
+    <view class="hot-item">
+      <view class="image-container"
+            data-row-id="{{item.row_id}}"
+            bindtap="itemClickCallback">
+        <image src="{{api.HOST_WORK+item.pic.pid}}!app.c540.webp"
+               mode="scaleToFill" class="hot-image"
+               style="width:{{systemInfo.windowWidth}}px;height:{{systemInfo.windowWidth}}px">
         </image>
         <view class="item-mask">
           <text class="hot-item-title">{{item.name}}</text>
@@ -34,7 +123,8 @@
       </view>
 
       <view class="hot-item-desc">
-        <image src="{{_api.HOST_HEAD+item.user.uid}}/180" class="hot-head-image"></image>
+        <image src="{{api.HOST_HEAD+item.user.uid}}/180"
+               class="hot-head-image"></image>
         <view class="hot-item-detail">
           <text class="hot-item-username">{{item.name}}</text>
           <view class="hot-location">
@@ -49,24 +139,21 @@
       </view>
     </view>
   </block>
-</scroll-view>
 
-<!-- 最新 -->
-<scroll-view class="latest-item-container {{currentNavbar==1 ? '' : 'hidden'}}" style="height: {{systemInfo.windowHeight}}px;" scroll-y="true" bindscrolltolower="pullUpLoadLatest">
-  <block wx:for="{{latest_list}}" wx:for-index="idx">
-    <view wx:if="{{idx%3===0}}" class="latest-item">
-      <image src="{{_api.HOST_WORK+latest_list[idx].pic.pid}}!app.c360.webp" class="latest-image"
-        data-row-id="{{latest_list[idx].row_id}}" bindtap="onItemClick"
-        style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill">
-      </image>
-      <image src="{{_api.HOST_WORK+latest_list[idx+1].pic.pid}}!app.c360.webp" class="latest-image"
-        data-row-id="{{latest_list[idx+1].row_id}}" bindtap="onItemClick"
-        style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill">
-      </image>
-      <image src="{{_api.HOST_WORK+latest_list[idx+2].pic.pid}}!app.c360.webp" class="latest-image"
-        data-row-id="{{latest_list[idx+2].row_id}}" bindtap="onItemClick"
-        style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill">
-      </image>
-    </view>
-  </block>
+  <!-- <block wx:for="{{items_list}}" wx:for-index="idx"> -->
+  <!--   <view wx:if="{{idx%3===0}}" class="latest-item"> -->
+  <!--     <image src="{{api.HOST_WORK+latest_list[idx].pic.pid}}!app.c360.webp" class="latest-image" -->
+  <!--       data-row-id="{{items_list[idx].row_id}}" bindtap="itemClickCallback" -->
+  <!--       style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill"> -->
+  <!--     </image> -->
+  <!--     <image src="{{api.HOST_WORK+latest_list[idx+1].pic.pid}}!app.c360.webp" class="latest-image" -->
+  <!--       data-row-id="{{items_list[idx+1].row_id}}" bindtap="itemClickCallback" -->
+  <!--       style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill"> -->
+  <!--     </image> -->
+  <!--     <image src="{{api.HOST_WORK+latest_list[idx+2].pic.pid}}!app.c360.webp" class="latest-image" -->
+  <!--       data-row-id="{{items_list[idx+2].row_id}}" bindtap="itemClickCallback" -->
+  <!--       style="width:{{(systemInfo.windowWidth-2)/3}}px;height:{{(systemInfo.windowWidth-2)/3}}px;" mode="scaleToFill"> -->
+  <!--     </image> -->
+  <!--   </view> -->
+  <!-- </block> -->
 </scroll-view>
