--- a/pages/item-detail/item-detail.wxss
+++ b/pages/item-detail/item-detail.wxss
@@ -48,3 +48,11 @@
   font-size: 12px;
   color: #999;
 }
+
+.buy-btn {
+  margin: 5px 0;
+  border: 1px solid #ccc!important;
+  color: #777!important;
+  width: 100%;
+  border-radius: 0px;
+}
